      to be autogenerated in the future.
 
    - Rationalized EXPORT_OK.

    - Changed makefile.pl to include author info in the ppd file.

1.49.1 Wed May 22 00:00:00 2002

    - Improved IsKeyPressed.

1.49.2 Tue Jun 04 15:39:23 2002

    - Improved IsKeyPressed (again).

    - Added VK_* constants and KEYEVENTF_* flags.

    - Added SendRawKey function.

1.50 (Test Version) Sun Jun 22 ??:??:?? 2003

    - Added use of AttachWin() for those functions that require the
      window to be attached to the calling thread's message queue.

1.50.1-ad Thu Apr 08 20:45:00 2004

    - Fixed crash with MenuSelect when used on MDI applications with documents
      maximized. (CTRONDLP)

    - Implemented pertinent parts of Jonathan A's patch for CygWin Perl. (CTRONDLP)

    - Added WindowFromPoint function and wptr.pl example script. (CTRONDLP)

    - Added the MouseClick function and documentation. (CTRONDLP)

1.50.2-ad Sun May 30 12:40:00 2004

    - Push*Button() functions will now correctly not manipulate disabled
      buttons. (CTRONDLP)

    - Fixed various compiler warnings. (CTRONDLP)

    - Minor updates to the documentation. (CTRONDLP)

    - Included initial script recording application; which is still a
      work-in-progress. (CTRONDLP)

1.50.3-ad Wed Feb 02 17:42:00 2005

     - Add more examles in eg directory (SZABGAB)
     - Tests using Test::More now (SZABGAB)
     - Some more documentation (SZABGAB)
     - Explanation how to setup development environment (SZABGAB)
     - A number of new exported methods regarding Menu items
       such as GetMenuItemInfo 
     - Added support for some 32bit controls: GetListViewContents, 
       SelListViewItem, SelListViewItemText, GetTabItems,
       SelTabItem, SelTabItemText, SelTreeViewItemPath (CTRONDLP)
     - Added basic mouse wheel support: MouseMoveWheel (CTRONDLP)
     - Added IsListViewItemSel and IsTabItemSel (CTRONDLP)
     - Updated SetFocus routine with AttachWin code (CTRONDLP)