@@ -2,7 +2,7 @@ use strict;
 use warnings;
 use Module::Build;
 
-# $Id: Build.PL,v 1.3 2005/02/08 19:02:43 ctrondlp Exp $
+# $Id: Build.PL,v 1.4 2005/04/17 06:45:50 ctrondlp Exp $
 
 # preliminary version, not working yet.
 
@@ -10,13 +10,13 @@ my $builder = Module::Build->new(
 	module_name         => 'Win32::GuiTest',
 	license             => 'perl',
 	dist_author         => 'Dennis K. Paulsen <ctrondlp@cpan.org>, Ernesto Guisado <erngui@acm.org>',
-	dist_version_from   => 'guitest.pm',
+	dist_version_from   => 'GuiTest.pm',
 	dynamic_config      => 1,
 #	dist_abstract       => '', # should be fetched from the dist_version_from
 #	create_makefile_pl  => 'traditional',
 #	create_readme       => 1,
 #	script_files        => ['eg/spy.pl'],
-	xs_files            => { 'guitest.xs' => 'guitest.cpp' },
+	xs_files            => { 'GuiTest.xs' => 'GuiTest.cpp' },
 #	requires            => {
 #		'Test::More'                => 0.47,
 #	},
